--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,57 @@
 version: "3"
 services:
-  nest_docker:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: nest_test_docker
-    ports:
-      - "3000:3000"
-    depends_on:
-      - postgres
-    environment:
-      - PGHOST=postgres
-      - PGPORT=5432
-      - PGDATABASE=nest_test_postgres
-      - PGUSER=nest_test
-      - PGPASSWORD=nest_test
+#  main:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    container_name: main
+#    ports:
+#      - "3000:3000"
+#    depends_on:
+#      - postgres
+#    volumes:
+#      - .:/usr/app
+#      - /usr/app/node_modules
+#    environment:
+#      PGHOST: postgres
+#      PGPORT: 5432
+#      PGDATABASE: "nest_test_postgres"
+#      PGUSER: "nest_test"
+#      PGPASSWORD: "nest_test"
+#    networks:
+#      - webnet
 
   postgres:
-    container_name: nest_test_postgres
+    container_name: postgres
     image: postgres:14
-    restart: always
+    restart: unless-stopped
     ports:
       - "5432:5432"
     volumes:
       - ./pgdata:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=nest_test_postgres
-      - POSTGRES_USER=nest_test
-      - POSTGRES_PASSWORD=nest_test
+      POSTGRES_DB: "nest_test_postgres"
+      POSTGRES_USER: "nest_test"
+      POSTGRES_PASSWORD: "nest_test"
     networks:
-      - nest_test
+      - webnet
 
   pgadmin:
-    container_name: nest_test_pgadmin
+    container_name: pgadmin
     image: dpage/pgadmin4
-    restart: always
+    restart: unless-stopped
     ports:
       - "5050:80"
     environment:
-      - PGADMIN_DEFAULT_EMAIL=nest_test@admin.com
-      - PGADMIN_DEFAULT_PASSWORD=nest_test
+      PGADMIN_DEFAULT_EMAIL: nest_test@admin.com
+      PGADMIN_DEFAULT_PASSWORD: nest_test
     volumes:
       - ./pgdata/pgadmin:/root/.pgadmin
     depends_on:
       - postgres
     networks:
-      - nest_test
+      - webnet
 networks:
-  nest_test:
-    driver: bridge
-
+  webnet:
 volumes:
-  postgres:
-  pgadmin:
+  pgdata:
