--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-validator": "^0.13.2",
     "mysql2": "^3.0.1",
     "pg": "^8.11.0",
+    "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
     "sequelize": "^6.28.0",
