--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "@nestjs/swagger": "^6.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "connect-redis": "^7.1.0",
+    "express-session": "^1.17.3",
     "mysql2": "^3.0.1",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
+    "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
     "sequelize": "^6.28.0",
@@ -41,9 +44,12 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/connect-redis": "^0.0.20",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.7",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
+    "@types/redis": "^4.0.11",
     "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
