--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,3 +77,17 @@ volumes:
 networks:
   redis-network:
     driver: bridge
+
+
+
+#  redis:
+#    container_name: redis
+#    image: redis:7.0.4-alpine
+#    restart: unless-stopped
+#    ports:
+#      - "6379:6379"
+#    volumes:
+#      - ./loc:/data
+#volumes:
+#  redis:
+#    driver: local
