--- a/package.json
+++ b/package.json
@@ -22,18 +22,24 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.0",
     "@nestjs/serve-static": "^3.0.1",
     "@nestjs/swagger": "^6.1.4",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "connect-redis": "^7.1.0",
+    "connect-redis": "^6.1.3",
     "express-session": "^1.17.3",
     "mysql2": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
-    "redis": "^4.6.7",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
     "sequelize": "^6.28.0",
@@ -44,11 +50,14 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@types/connect-redis": "^0.0.20",
+    "@types/bcrypt": "^5.0.0",
+    "@types/connect-redis": "^0.0.18",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.7",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
     "@types/redis": "^4.0.11",
     "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.12",
