--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,12 +30,11 @@ services:
     volumes:
       - ./pgdata:/var/lib/postgresql/data
     environment:
-      POSTGRES_DB: "nest_test_postgres"
-      POSTGRES_USER: "nest_test"
-      POSTGRES_PASSWORD: "nest_test"
+      POSTGRES_DB: nest_test_postgres
+      POSTGRES_USER: nest_test
+      POSTGRES_PASSWORD: nest_test
     networks:
       - webnet
-
   pgadmin:
     container_name: pgadmin
     image: dpage/pgadmin4
@@ -51,7 +50,34 @@ services:
       - postgres
     networks:
       - webnet
+
+  redis:
+    container_name: redis
+    image: redis:7
+    command: redis-server
+    volumes:
+      - redis:/var/lib/redis
+      - redis-config:/usr/local/etc/redis/redis.conf
+    ports:
+      - "6379:6379"
+    networks:
+      - webnet
+  redis-commander:
+    container_name: redis-commander
+    image: rediscommander/redis-commander:latest
+    environment:
+      REDIS_HOSTS: local:redis:6379
+      HTTP_USER: root
+      HTTP_PASSWORD: qwerty
+    ports:
+      - "8081:8081"
+    networks:
+      - webnet
+    depends_on:
+      - redis
 networks:
   webnet:
 volumes:
   pgdata:
+  redis:
+  redis-config:
