--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "docker:up": "docker-compose -f ./docker-compose.yml up --build -d",
+    "docker:down": "docker compose down",
+    "docker:ps": "docker compose ps"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^2.2.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^8.0.1",
-    "@nestjs/passport": "^10.0.0",
+    "@nestjs/jwt": "^10.0.3",
+    "@nestjs/mapped-types": "^1.2.2",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.0",
     "@nestjs/serve-static": "^3.0.1",
@@ -32,16 +36,17 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "connect-redis": "^6.1.3",
+    "cookie-parser": "^1.4.6",
     "express-session": "^1.17.3",
     "mysql2": "^3.0.1",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.5.5",
+    "rxjs": "^7.2.0",
     "sequelize": "^6.28.0",
     "sequelize-typescript": "^2.1.5",
     "swagger-ui-express": "^4.6.0"
@@ -52,11 +57,12 @@
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/connect-redis": "^0.0.18",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.7",
     "@types/jest": "^28.1.4",
-    "@types/node": "^18.0.3",
-    "@types/passport-jwt": "^3.0.6",
+    "@types/node": "18.15.11",
+    "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "@types/redis": "^4.0.11",
     "@types/sequelize": "^4.28.14",
@@ -73,7 +79,7 @@
     "ts-jest": "^28.0.5",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.8.2",
-    "tsconfig-paths": "^4.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.7.4"
   },
   "jest": {
