--- a/package.json
+++ b/package.json
@@ -38,8 +38,11 @@
     "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.17.3",
+    "ioredis": "^5.3.2",
     "mysql2": "^3.0.1",
+    "nestjs-redis": "^1.3.3",
     "passport": "^0.6.0",
+    "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.0",
@@ -60,6 +63,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.7",
+    "@types/ioredis": "^5.0.0",
     "@types/jest": "^28.1.4",
     "@types/node": "18.15.11",
     "@types/passport-jwt": "^3.0.8",
